--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "sockjs-client": "^1.5.2",
+    "stompjs": "^2.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
