--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stomp/stompjs": "^6.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -14,8 +15,7 @@
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
     "redux": "^4.0.5",
-    "sockjs-client": "^1.5.2",
-    "stompjs": "^2.3.3"
+    "sockjs-client": "^1.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
